2006-07-29  Bruno Haible  <bruno@clisp.org>

	* relocatable.m4: Add comments.

2006-07-23  Bruno Haible  <bruno@clisp.org>

	* openmp.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2006-07-23  Bruno Haible  <bruno@clisp.org>

	* tls.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2006-07-22  Bruno Haible  <bruno@clisp.org>

	* gl_list.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2006-07-22  Bruno Haible  <bruno@clisp.org>

	* strtol.m4: Update from gnulib.
	* strtoul.m4: Update from gnulib.

	* strerror_r.m4: Update from gnulib.

	* stdbool.m4: Update from gnulib.

	* minmax.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

	* mbswidth.m4: Update from gnulib.

	* wcwidth.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

	* getopt.m4: Update from gnulib.

	* fnmatch.m4: Update from gnulib.

	* error.m4: Update from gnulib.
	* extensions.m4: Update from gnulib.

2006-07-21  Bruno Haible  <bruno@clisp.org>

	* gettext-0.15 released.

2006-07-21  Bruno Haible  <bruno@clisp.org>

	* stdarg.m4: Update from gnulib.

2006-07-21  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Convert target_version "null" to "1.1".

2006-07-19  Bruno Haible  <bruno@clisp.org>

	* getline.m4 (AM_FUNC_GETLINE): When cross-compiling, assume that
	getline works on glibc2 systems. Needed to avoid trouble in
	relocatable.c.
	Reported by Nils Magnus Larsgard <nmlarsgaard@atmel.no>.

2006-06-28  Bruno Haible  <bruno@clisp.org>

	Assume <dirent.h> on all Unix platforms. Assume closedir works.
	* backupfile.m4 (gt_PREREQ_BACKUPFILE): Don't invoke AC_HEADER_DIRENT,
	AC_FUNC_CLOSEDIR_VOID. Instead test for dirent.h.

2006-06-27  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (aclocal_DATA): Remove isc-posix.m4.

2006-06-27  Bruno Haible  <bruno@clisp.org>

	Assume correct S_ISDIR macro.
	* tmpdir.m4 (gt_TMPDIR): Remove AC_STAT_MACROS_BROKEN invocation.

2006-06-27  Bruno Haible  <bruno@clisp.org>
