@@ -1,5 +1,10 @@
 2006-07-29  Bruno Haible  <bruno@clisp.org>
 
+	* alloca.m4 (gl_PREREQ_ALLOCA): Add a dummy statement. Avoids a sh
+	syntax error.
+
+2006-07-29  Bruno Haible  <bruno@clisp.org>
+
 	* relocatable.m4: Add comments.
 
 2006-07-23  Bruno Haible  <bruno@clisp.org>
